[package]
name = "assert-be-close"
version = "1.0.3"
authors = ["azishio"]
edition = "2021"
description = "A simple function to assert that two numbers are close to each other."

documentation = "https://docs.rs/assert-be-close"
homepage = "https://crates.io/crates/assert-be-close"
repository = "https://github.com/azishio/assert-be-close-rs"

readme = "README.md"

keywords = ["assert", "float", "close", "approximate"]
categories = ["development-tools::debugging", "development-tools::testing"]
license = "MIT OR Apache-2.0"

[dependencies]
num = "0.4.2"
